Fix dark mode for disqus

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -200,3 +200,8 @@ pre code {
     font-size: 1.5em;
     margin: 10px;
 }
+
+/* Fix disqus iframe not rendering dark mode properly */
+iframe[src*="https://disqus.com"] {
+  color-scheme: light;
+}
